--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 
 [dependencies]
 clap = { version = "4.5.32", features = ["derive"] }
+mime_guess = "2.0.5"
 regex = "1.11.1"
 
 [dev-dependencies]
