--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2024"
 clap = { version = "4.5.32", features = ["derive"] }
 mime_guess = "2.0.5"
 regex = "1.11.1"
+serde = { version = "1.0.219", features = ["derive"] }
+serde_json = "1.0.140"
 
 [dev-dependencies]
 rstest = "0.25.0"
